<resources>
    <string name="app_name">Sistema de Inventarios Zapateria Jessi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sistema de Inventarios</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Vendedores</string>
    <string name="menu_slideshow">Proveedores</string>
    <string name="menu_cotizaciones">Productos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Bienvenido Usuario</string>
    <string name="nav_header_body">Jessica Anahí Muñoz Y Jesús Gpe Gaona </string>
    <string name="menu_compras">Compras</string>
    <string name="menu_ventas">Ventas</string>
<<<<<<< HEAD
    <string name="nav_reporteVentasDia">Reporte de Ventas (Facturas)</string>
=======
    <string name="menu_reporte_producto">Reporte de productos por ventas</string>
>>>>>>> b693392e14d648e105d7f4d393a4d8d21240c1e7
</resources>