<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_48pt"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_empleado"
            android:icon="@drawable/ic_card_travel_black_48dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_vehiculos"
            android:icon="@drawable/ic_person_black_48dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_cotizaciones"
            android:icon="@drawable/trainers_shoes_5694"
            android:title="@string/menu_cotizaciones" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_assignment_ind_black_48dp"
            android:title="Clientes" />
        <item
            android:id="@+id/nav_compras"
            android:icon="@drawable/ic_add_shopping_cart_black_48dp"
            android:title="@string/menu_compras" />
        <item
            android:id="@+id/nav_ventas"
            android:icon="@drawable/ic_add_shopping_cart_black_48dp"
            android:title="@string/menu_ventas" />
    </group>
</menu>