<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.idgs902.cotiz_gaona_jesus.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_empleado"
        android:name="com.idgs902.cotiz_gaona_jesus.ui.empleados.VendedoresFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_vendedores" />

    <fragment
        android:id="@+id/nav_vehiculos"
        android:name="com.idgs902.cotiz_gaona_jesus.ui.vehiculos.ProveedorFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_proveedor" />
    <fragment
        android:id="@+id/nav_cotizaciones"
        android:name="com.idgs902.cotiz_gaona_jesus.ui.cotizacion.ProductosFragment"
        android:label="@string/menu_cotizaciones" />
    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.idgs902.cotiz_gaona_jesus.ui.cliente.ClienteFragment"
        android:label="Clientes"
        tools:layout="@layout/fragment_cliente" />
    <fragment
        android:id="@+id/nav_compras"
        android:name="com.idgs902.cotiz_gaona_jesus.ui.compras.ComprasFragment"
        android:label="@string/menu_compras"
        tools:layout="@layout/compras_fragment" /><action android:id="@+id/action_global_nav_compras" app:destination="@id/nav_compras"/>
    <fragment
        android:id="@+id/nav_ventas"
        android:name="com.idgs902.cotiz_gaona_jesus.ui.ventas.VentaFragment"
        android:label="@string/menu_ventas"
        tools:layout="@layout/venta_fragment" />
    <fragment
        android:id="@+id/nav_reporte_productos"
        android:name="com.idgs902.cotiz_gaona_jesus.ui.reporte_venta_producto.ReporteProductoFragment"
        android:label="@string/menu_reporte_producto"
        tools:layout="@layout/reporte_producto_fragment" />
</navigation>